# fastmcp-auth

./: .gitignore  README.md  mcp_client.py  pyproject.toml  requirements.txt
agent/: main.py
api/: main.py  test.http
chainlit/: chainlit.md  chainlit_agent.py
mcp/: main.py
web/: .gitignore  README.md  manual-setup-commands.sh  package-lock.json  package.json  setup-azure-apps.sh
web/backend-examples/: README.md
web/public/: index.html  manifest.json
web/src/: App.css  App.js  authConfig.js
web/src/components/: MainContent.js  NotAuthenticatedMessage.js  OAuthCallback.js  TopBar.js  WelcomeMessage.js
web/src/styles/: NotAuthenticatedMessage.css  TopBar.css  WelcomeMessage.css
